[hue] same codebase for oh 3.4.x and oh 4.0
Signed-off-by: Andrew Fiddian-Green <software@whitebear.ch>